--- a/css/styles.css
+++ b/css/styles.css
@@ -3,23 +3,61 @@
     padding: 0;
 }
 
+:root {
+    font-size: 62.5%;
+}
+
+body {
+    font-family: 'Times New Roman', Helvetica, sans-serif;
+}
 
 h1 {
     color: purple;
-    font-size: 90px;
-    font-weight: 500px;
-    text-align: right;
+    font-size: 7.0rem;
+    font-weight: 50.0rem;
+    text-transform: capitalize;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+h1,h2,h3,h4,h5,h6 {
+    font-family: 'Times New Roman','Courier New', Courier, monospace;
+}
+
+h2 {
+    font-size: 4.5rem;
+}
+
+.novo-em {
+    font-size: 300%
+}
+
+.novo-em h2 {
+    font-size: 3.2em
 }
 
 p {
-    font-size: 18px;
+    font-size: 1.8rem;
     text-align: justify;
-    text-indent: 50px;
+    text-indent: 90px;
+}
+
+a {
+    font-size: 2.4rem;
+    color: blue;
+}
+
+a:visited {
+    color: red;
+}
+
+a:hover {
+    color: coral;
 }
 
 .bg {
-    height: 500px;
-    width: 100%;
+    height: 100vh;
+    width: 100vw;
     background-color: aqua;
     background-image: url('https://images.pexels.com/photos/531880/pexels-photo-531880.jpeg?cs=srgb&dl=pexels-pixabay-531880.jpg&fm=jpg');
     background-size: cover;
