--- a/css/styles.css
+++ b/css/styles.css
@@ -90,15 +90,56 @@ ul, ol {
     font-size: 1.8rem;
 }
 
+.menu {
+    position: fixed;
+    background-color: steelblue;
+    width: 100%;
+    height: 7rem;
+    z-index: 1;
+}
+
+.contact-list h2 {
+    top: 7rem;
+    position: sticky;
+    background-color: limegreen;
+}
+
+.boxes {
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.box + span {
+    display: none;
+}
+
 .box {
+    flex: 30%;
     height: 10rem;
     width: 20rem;
     margin: 1.5rem;
+    padding: 1.5rem;
     border: 10px solid red;
+    color: #FFF;
     border-radius: 0.4rem ;
     background-color: darkturquoise;
-    display: inline-block;
 }
+
+.box:nth-child(1) {
+    float: none;
+}
+
+
+/* .box:nth-child(1) {
+    position: absolute;
+    top: 50px;
+    left: 100px;
+} */
+
+/* .box:nth-child(2) {
+    position: fixed;
+} */
 
 img {
     height: 10rem;
